--- a/web/index.html
+++ b/web/index.html
@@ -22,6 +22,8 @@
                http://tc1027.metawerx.com.au/activiti-rest/service/process-engine</option>
              <option value="http://tc1027.metawerx.com.au/activiti-rest/service/deployments?start=0&size=2">
                http://tc1027.metawerx.com.au/activiti-rest/service/deployments?start=0&size=2</option>
+             <option value="http://tc1027.metawerx.com.au/activiti-rest/service/process-instances?start=0&size=10">
+               http://tc1027.metawerx.com.au/activiti-rest/service/process-instances?start=0&size=10</option>
            </select>
          <div id="submit" class="align-left">
            <button id="send" class="test-button" >Send</button>
@@ -35,7 +37,7 @@
       <section id="result" >
        <div>
          <h3 class="display-inline">Raw Rest Service Response</h3>
-         <button id="clearDebugBtn">Clear</button>
+         <button id="clearResultBtn">Clear</button>
        </div>
        <div id="result-container" >
          <h3 class="result-title">JSON response from server</h3>
